import React from "react";
import renderer from 'react-test-renderer';
import Main from "./main";
import {BrowserRouter} from "react-router-dom";

const placesAmount = 312;
const placeList = [{
  id: 0,
  mark: `premium`,
  img: `img/apartment-01.jpg`,
  value: 120,
  time: `night`,
  isInBookmark: true,
  rating: 5,
  name: `luxurious apartment at great location`,
  type: `Apartment`,
  point: [52.3909553943508, 4.929309666406198],
  cityLocation: [52.38333, 4.9]
}, {
  id: 1,
  img: `img/apartment-02.jpg`,
  value: 200,
  time: `week`,
  isInBookmark: false,
  rating: 0,
  name: `Beautiful & luxurious`,
  type: `Hotel`,
  point: [52.3909553943508, 4.929309666406198],
  cityLocation: [52.38333, 4.9]
}];
const cityList = [`Amsterdam`, `Paris`, `Cologne`, `Brussels`, `Hamburg`, `Dusseldorf`];
const activeCity = `Amsterdam`;

describe(`Main component snapshot tests`, () => {
  it(`Main component show two places`, () => {
    const tree = renderer
      .create(
          <BrowserRouter>
            <Main
              placeList={placeList}
              placesAmount={placesAmount}
              cityList={cityList}
              activeCity={activeCity}
              onCityClickHandler={() => {}}
              renderMap={() => <React.Fragment/>}
              hasError={false}
              chosenSorting={`Popular`}
              onChooseSortingHandler={() => {}}
              onActiveHandler={() => {}}
              addToFavorites={() => {}}
            />
          </BrowserRouter>
      )
      .toJSON();

    expect(tree).toMatchSnapshot();
  });

  it(`Main if places has no, have to be phrase "No places to stay available"`, () => {
    const tree = renderer
      .create(
          <BrowserRouter>
            <Main
              placeList={[]}
              placesAmount={0}
              cityList={cityList}
              activeCity={activeCity}
              renderMap={() => <React.Fragment/>}
              hasError={false}
              onCityClickHandler={() => {}}
              chosenSorting={`Popular`}
              onChooseSortingHandler={() => {}}
              onActiveHandler={() => {}}
              addToFavorites={() => {}}
            />
          </BrowserRouter>
      )
      .toJSON();

    expect(tree).toMatchSnapshot();
  });

  it(`if has error show error message`, () => {
    const tree = renderer
      .create(
          <BrowserRouter>
            <Main
              hasError={true}
              placeList={[]}
              placesAmount={0}
              cityList={[]}
              activeCity={``}
              onCityClickHandler={() => {}}
              renderMap={() => <React.Fragment/>}
              chosenSorting={`Popular`}
              onChooseSortingHandler={() => {}}
              onActiveHandler={() => {}}
              addToFavorites={() => {}}
            />
          </BrowserRouter>
      )
      .toJSON();

    expect(tree).toMatchSnapshot();
  });
});
